--- a/Books/MA 1005_en.tex
+++ b/Books/MA 1005_en.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt, letterpaper, twoside]{book}
-\usepackage{style/springer_custom}
+\usepackage{style/springer_custom_en}
 
 \title{\bfseries\Huge Differential Equations \\ \Large Course Notes}
 \author{\Large J. Ignacio Padilla Barrientos \\ \large Universidad de Costa Rica}
